--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                     <img src="images/Portafolio/hack-s.png">
         
                                     <div class="icons">
-                                         <a href="images/Portafolio/Hack.diversity-b.png" title="View image" class="openButton" 
+                                         <a href="images/Portafolio/hack-b.png" title="View image" class="openButton" 
                                            data-fancybox data-caption="Selected as 1 of 50 out of a competitive pool of ~150 candidates within Greater Boston.
                                            Through the program, I interned at Liberty Mutual as a Software Engineer Intern"> 
                                              <i class="fa fa-search"></i>
