--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <img class= "aboutImage" src="images/about.jpeg" alt="about me" >
 
                     <div class="resume">
-                        <a href="images/Sabrina-Minaya-resume.pdf" download="CV" target="_blank">
+                        <a href="#" download="CV" target="_blank">
                             
                             <button class="btn">Download Resume</button>
                         </a>
