remove resume button

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                     <img class= "aboutImage" src="images/about.jpeg" alt="about me" >
 
                     <div class="resume">
-                        <a href="#" download="CV" target="_blank">
+                        <a href="" download="CV" target="_blank">
                             
-                            <button class="btn">Download Resume</button>
+                           <!-- <button class="btn">Download Resume</button> -->
                         </a>
                     </div>
         
