--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
                             <div class="item">
 
 
-                            <img src="images/Portafolio/happies country.jpeg">
+                            <img src="images/Portafolio/happies country (2).jpg">
 
                             <div class="icons">
-                                 <a href="images/Portafolio/CS544_Report_Minaya.pdf" title="View image" class="openButton" 
+                                 <a href="images/Portafolio/Happiness report.pdf" title="View image" class="openButton" 
                                  data-fancybox data-caption=" The World Happiness  Report analyze the factors that influence the level of happiness on scale from 0 to 10.
                                  There are six factor that contribute to the happiness score: GDP per Capita, Family, Life Expectancy, Freedom, Generosity, Trust Government.
                                  the Central Limit Theorem : the distribution of the sample means approaches a normal distribution as the sample size increase.
