--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
                                      <i class="fa fa-search"></i>
                                  </a>
-                                 <a href="images/Portafolio/CS544_Report_Minaya.pdf" target="_blanck" class="projectLink">
+                                 <a href="images/Portafolio/Happiness report.pdf" target="_blanck" class="projectLink">
                                         <i class="fa fa-link"></i>
                                     </a>
                                     
